debug modal and fix spacing problem with shopping list

--- a/styles/all_shopping_list.css
+++ b/styles/all_shopping_list.css
@@ -8,8 +8,8 @@ body {
   }
 
   #card-container {
-    width: 100%;
-    height: 98%;
+    /* width: 100%;
+    height: 98%; */
     overflow: scroll;
     padding-top: 1em;
     padding-bottom: 2em;
@@ -24,7 +24,7 @@ body {
   .card {
     width: 40%;
     height: fit-content;
-    margin: 0 5% 2em 5%;
+    margin: 0 5% 1em 5%;
     cursor: pointer;
     transition: 0.5s;
     border: 1px solid transparent;
