--- a/styles/single_shopping_list.css
+++ b/styles/single_shopping_list.css
@@ -108,7 +108,7 @@ body {
 }
 
 /* The Modal (background) */
-/* .modal {
+#myModal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -119,7 +119,7 @@ body {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-} */
+} 
 
 /* Modal Content/Box */
 .modal-content {
